[project]
name = "diffu-from-features"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (==2.3.1)",
    "datasets (==2.21.0)",
    "einops (==0.7.0)",
    "numpy (==1.26.4)",
    "tqdm (==4.66.5)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "timm (>=1.0.15,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pycatch22 (>=0.4.5,<0.5.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
